# qa-abs-bot

./: Dockerfile  README.md  docker-compose.yml  main.py  metrics.py  pyproject.toml
applications/: browser_manager.py  cross_project_scraper.py
applications/language_scraper/: scraper.py
bot/: bot.py
config/: config.py
handlers/: message_handler.py
keyboards/: keyboard_manager.py
prometheus/: prometheus.yml
states/: bot_states.py
