[tool.poetry]
name = "qa-abs-bot"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Dmytro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
playwright = "^1.50.0"
aiogram = "^3.18.0"
dotenv = "^0.9.9"
redis = "^5.2.1"
prometheus-client = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
